# venue-service

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4c4c3024ee87_init_migration.py
specs/: BOOT.md  SPEC.md  WAL.md  WAL_PROTOCOL.md
specs/common/: venue-api.yaml  venue-spec.md  venue.sql
src/: __init__.py  app.py  core_exceptions.py  main.py
src/api/: __init__.py  deps.py
src/api/routes/: __init__.py  health.py
src/api/v1/: __init__.py  companies.py  payouts.py  venues.py
src/config/: __init__.py  logging.py  settings.py
src/db/: base.py  session.py
src/events/: __init__.py  publisher.py  schemas.py  topics.py
src/grpc/: __init__.py  server.py  service.py
src/middleware/: __init__.py  auth.py  context.py  error_handler.py  request_context.py
src/models/: __init__.py  base.py  company.py  enums.py  payout.py  venue.py
src/repositories/: __init__.py  base.py  company_repository.py  payout_repository.py  venue_repository.py
src/schemas/: __init__.py  common.py  company.py  payout.py  venue.py
src/services/: __init__.py  company_service.py  payout_service.py  venue_service.py
src/utils/: __init__.py  cors.py  lifespan.py
