[project]
name = "venue-service"
version = "1.0.0"
description = "Venue Management Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "python-multipart>=0.0.12,<1.0.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "types-PyYAML>=6.0.12.20250516,<7.0.0",
  "ruff>=0.7.0,<1.0.0",
  "mypy>=1.12.0,<2.0.0",
  "aiosqlite>=0.20.0,<1.0.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["src/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = []
